[workspace]
resolver = "2"
members = [
    "airdrop",
    "boilerplate",
    "gas_estimator",
    "token_vesting",
    "staking",
    "escrow",
    "amm_pool",
    "dao_governance",
    "dao_whitelist",
    "lending_base",
    "subscriptions",
    "nft_factory",
    "multisig_wallet",
    "yield_vault",
    "prediction_market",
    "prediction_resolution_engine",
    "emitter_registry",
    "cross_chain_bridge",
    "flash_loan",
    "flash_loan_registry",
    "royalty_registry",
    "stablecoin_emitter",
    "nft_royalty_emitter",
    "oracle_aggregator",

    "governance_timelock",

    "amm_pool_v2",
    "delegator_registry",
    "access_whitelist",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
incremental = false
codegen-units = 1
lto = true
